# SPDX-FileCopyrightText: 2022 Project CHIP Authors
#
# SPDX-License-Identifier: Apache-2.0

# Options from standalone-chip.mk that differ from configure defaults. These
# options are used from examples/.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

#import("${chip_root}/build/chip/tests.gni")

group("beken") {
  deps = [
    "${chip_root}/examples/lighting-app/beken:MatterApp",
    "${chip_root}/src/lib",
  ]
}
group("default") {
  deps = [ ":beken" ]
}
