# SPDX-FileCopyrightText: 2022 Project CHIP Authors
#
# SPDX-License-Identifier: Apache-2.0

# Options from standalone-chip.mk that differ from configure defaults. These
# options are used from examples/.

custom_toolchain =
    "//third_party/connectedhomeip/config/bouffalolab/toolchain:riscv_gcc"
