# SPDX-FileCopyrightText: 2020 Project CHIP Authors
#
# SPDX-License-Identifier: Apache-2.0

# Options from standalone-chip.mk that differ from configure defaults. These
# options are used from examples/.
import("//build_overrides/pigweed.gni")
chip_device_platform = "esp32"

chip_project_config_include = ""
chip_system_project_config_include = ""
chip_ble_project_config_include = ""

mbedtls_target = "//mbedtls:mbedtls"
lwip_platform = "external"

#Enabling this causes some error
#chip_inet_config_enable_tun_endpoint = false
chip_inet_config_enable_tcp_endpoint = true
chip_inet_config_enable_udp_endpoint = true

custom_toolchain = "//third_party/connectedhomeip/config/esp32/toolchain:esp32"

# Avoid constraint forcing for ESP32:
#   Esp32 is also building based on python and there are requirements
# conflicts (e.g. pyparsing at the time this was added)
#   Matter already fixes python constraints, we use those instead of
# whatever pigweed ships with
pw_build_PIP_CONSTRAINTS =
    [ "//third_party/connectedhomeip/scripts/setup/constraints.txt" ]
