# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Options from standalone-chip.mk that differ from configure defaults. These
# options are used from examples/.
import("//build_overrides/pigweed.gni")
chip_device_platform = "esp32"

chip_project_config_include = ""
chip_system_project_config_include = ""
chip_ble_project_config_include = ""

mbedtls_target = "//mbedtls:mbedtls"
lwip_platform = "external"

#Enabling this causes some error
#chip_inet_config_enable_tun_endpoint = false
chip_inet_config_enable_tcp_endpoint = false
chip_inet_config_enable_udp_endpoint = true

chip_config_memory_management = "platform"

custom_toolchain = "//third_party/connectedhomeip/config/esp32/toolchain:esp32"

# Avoid constraint forcing for ESP32:
#   Esp32 is also building based on python and there are requirements
# conflicts (e.g. pyparsing at the time this was added)
#   Matter already fixes python constraints, we use those instead of
# whatever pigweed ships with
pw_build_PIP_CONSTRAINTS =
    [ "//third_party/connectedhomeip/scripts/setup/constraints.txt" ]
